--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ s</a></u></p>
 <p> This text is <sub> subscript </sub> text </p>
 <p> This <span style="font-size: 50px;">text</span> is <sup>superscript</sup> text </p>
 <p> This text is <ins>inserted</ins> text </p>
-<p> This text is <d`el>deleted</del> text</p>
+<p> This text is <del>deleted</del> text</p>
 <p style="margin: 2cqh;"> This text is <mark> highlighted</mark> text</p>
 </div>
 <h1>My Ration List</h1>
